# cosemserver

./: CMakeLists.txt
arch/host/: bsp_flash.c
database/: db_cosem_associations.c
